2003-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/tests/run_constitute.bat: Add batch script to
	run constitute tests.
	* magick/module.c: Added a ltdl_initialized static flag to track
	if libltdl has been initialized by lt_dlinit().
	(TagToFunctionName): Use a stack buffer for the string rather than
	allocating heap data.
	(UnregisterModule): Report errors via exception info as the
	interface suggests.
	(UnloadModule): Report errors via exception info as the interface
	suggests.
	(DestroyModuleInfo): Only invoke lt_dlexit() if lt_dlinit() has
	previously been invoked.
	* locale/C.mgk: Added FailedToCloseModule module error.
	* magick/module.c (UnloadModule): Report exception via exception
	parameter rather than simply printing out an error message and
	exiting.
	* magick/Makefile.am (noinst_HEADERS): integral_types.h had to be
	listed *somewhere* in order to make it into the distribution.

2003-05-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (magick-version): Perform version.isx substitutions
	via Makefile.am rather than configure.
	* magick/magick_config_api.h.in: Added template header for
	the installed magick_config.h.
	* magick/magick.c (InitializeMagick): Improved the signal handling
	and registration method. Signal handlers are only registered for a
	signal if the current signal handling disposition for that signal
	is set to the default (SIG_DFL). When a signal is caught,
	DestroyMagick is invoked, the handling for the signal is set back
	to SIG_DFL, and then the signal is re-raised to trigger the
	default handler for that signal. This causes the process to behave
	as closely to the default as possible (e.g. generating a core
	file) while ensuring that DestroyMagick is executed. This also
	ensures that signal handlers registered by API users are not
	overridden by invoking InitializeMagick.
	* configure.ac: Added tests for sigemptyset and
	sigaction.
	Add a check for the return type of signal handlers.